== Affiliates - Changelog ==

= 5.3.0 =
* WordPress 6.8 compatible.
* Fixed Affiliates Dashboard block preview not available.

= 5.2.0 =
* WordPress 6.8 compatible.
* Revised Robot Cleaner UI elements.
* Fixed Robot Cleaner not showing throbber when doing work.
* Fixed Robots allowed duplicate entries.
* Added more robust API function to use unlimited time for requests (now used for robot cleaning requests).
* Updated information and revised styling of the add-ons section.
* Updated the translation template.
* Removed deprecated/dropped integrations.
* Updated the German translations.
* Updated the Spanish translation.
* Updated the French translation.
* Updated the Hebrew translation.
* Updated the Italian translation.
* Updated the Indonesian translation.
* Updated the Dutch translation.
* Updated the Polish translation.
* Updated the Portuguese translation.
* Updated the Slovak translation.
* Updated the Ukrainian translation.
* Updated the Lithuanian translation.

= 5.1.0 =
* WordPress 6.8 compatible.
* Fixed declaration of dynamic properties of the Affiliates_Pagination class.
* Fixed translation used too early while processing constants.
* Fixed translations used too early while determining currencies.
* Updated recommendations.
* Updated translation template.

= 5.0.0 =
* WordPress 6.7 compatible.
* Requires at least WordPress 6.5.
* Fixes a PHP Warning caused by a malformed comparison when producing totals.
* Fixes performance issues with large InnoDB hits tables when recording hits.
* Fixes a PHP Deprecated notice passing null to version_compare().
* Fixes several instances of PHP Deprecated notices related to the creation of dynamic properties.
* Added the Dutch translation.

= 4.20.0 =
* WordPress 6.6 compatible.
* Requires at least WordPress 6.2.
* Requires at least PHP 7.4.
* Fixed deprecated notice passing null to do_shortcode() in several instances.

= 4.19.0 =
* WordPress 6.2 compatible.
* Requires at least WordPress 6.0.