@@ -3,6 +3,7 @@
 = 5.3.0 =
 * WordPress 6.8 compatible.
 * Fixed Affiliates Dashboard block preview not available.
+* Fixed Affiliates Dashboard Earnings block preview not available.
 
 = 5.2.0 =
 * WordPress 6.8 compatible.
